modules/simulation/web_monitor/rerun/crates/store/re_mcap/src/decoders/snapshots/re_mcap__decoders__protobuf__integration_tests__oneof_message_variants.snap
---
source: crates/store/re_mcap/src/decoders/protobuf.rs
expression: "format_chunk(&chunks[0])"
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                      │
│ * entity_path: /shape_topic                                                                                                                                                    │
│ * id: [**REDACTED**]                                                                                                                                                           │
│ * version: [**REDACTED**]                                                                                                                                                      │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬──────────────────────────────┬──────────────────────────────────┬──────────────────────────────────────────────────────────┐ │
│ │ RowId                                         ┆ message_time             ┆ publish_time             ┆ com.example.Shape:message                                │ │
│ │ ---                                           ┆ ---                          ┆ ---                              ┆ ---                                                      │ │
│ │ type: non-null FixedSizeBinary(16)            ┆ type: Duration(ns)           ┆ type: Duration(ns)               ┆ type: List(Struct("name": Utf8, "geometry":              │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ index_name: message_time ┆ index_name: publish_time ┆ Struct("circle": Struct("radius": Float32), "rectangle": │ │
│ │ ARROW:extension:name: TUID                    ┆ is_sorted: true              ┆ is_sorted: true                  ┆ Struct("width": Float32, "height": Float32)), metadata:  │ │
│ │ is_sorted: true                               ┆ kind: index                  ┆ kind: index                      ┆ {"ARROW:extension:name":                                 │ │
│ │ kind: control                                 ┆                              ┆                                  ┆ "rerun.datatypes.ProtobufOneOf"}))                       │ │
│ │                                               ┆                              ┆                                  ┆ archetype: com.example.Shape                             │ │
│ │                                               ┆                              ┆                                  ┆ component: com.example.Shape:message                     │ │
│ │                                               ┆                              ┆                                  ┆ kind: data                                               │ │
│ ╞═══════════════════════════════════════════════╪══════════════════════════════╪══════════════════════════════════╪══════════════════════════════════════════════════════════╡ │
│ │ row_[**REDACTED**]                            ┆ PT0.000000001S               ┆ PT0.000000001S                   ┆ [{name: wheel, geometry: {circle: {radius: 5.0},         │ │
│ │                                               ┆                              ┆                                  ┆ rectangle: null}}]                                       │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ PT0.000000002S               ┆ PT0.000000002S                   ┆ [{name: door, geometry: {circle: null, rectangle:        │ │
│ │                                               ┆                              ┆                                  ┆ {width: 3.0, height: 7.0}}}]                             │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ PT0.000000003S               ┆ PT0.000000003S                   ┆ [{name: unknown, geometry: null}]                        │ │
│ └───────────────────────────────────────────────┴──────────────────────────────┴──────────────────────────────────┴──────────────────────────────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
