modules/simulation/web_monitor/rerun/crates/store/re_mcap/src/decoders/snapshots/re_mcap__decoders__protobuf__integration_tests__recursive_message_fields_are_stored_as_bytes.snap
---
source: crates/store/re_mcap/src/decoders/protobuf.rs
expression: "format_chunk(&chunks[0])"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                    │
│ * entity_path: /test_topic                                                                                                                                                   │
│ * id: [**REDACTED**]                                                                                                                                                         │
│ * version: [**REDACTED**]                                                                                                                                                    │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬───────────────────────────────┬───────────────────────────────┬──────────────────────────────────────────────────────────┐ │
│ │ RowId                                         ┆ message_time                  ┆ publish_time                  ┆ com.example.Config:message                               │ │
│ │ ---                                           ┆ ---                           ┆ ---                           ┆ ---                                                      │ │
│ │ type: non-null FixedSizeBinary(16)            ┆ type: Timestamp(ns)           ┆ type: Timestamp(ns)           ┆ type: List(Struct("name": non-null Utf8, "fields":       │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ index_name: message_time      ┆ index_name: publish_time      ┆ Map("entries": non-null Struct("key": non-null Utf8,     │ │
│ │ ARROW:extension:name: TUID                    ┆ is_sorted: true               ┆ is_sorted: true               ┆ "value": non-null Binary, metadata:                      │ │
│ │ is_sorted: true                               ┆ kind: index                   ┆ kind: index                   ┆ {"ARROW:extension:name":                                 │ │
│ │ kind: control                                 ┆                               ┆                               ┆ "rerun.datatypes.ProtobufSelfReferential"}), unsorted))) │ │
│ │                                               ┆                               ┆                               ┆ archetype: com.example.Config                            │ │
│ │                                               ┆                               ┆                               ┆ component: com.example.Config:message                    │ │
│ │                                               ┆                               ┆                               ┆ kind: data                                               │ │
│ ╞═══════════════════════════════════════════════╪═══════════════════════════════╪═══════════════════════════════╪══════════════════════════════════════════════════════════╡ │
│ │ row_[**REDACTED**]                            ┆ 1970-01-01T00:00:00.000000001 ┆ 1970-01-01T00:00:00.000000001 ┆ [{name: session, fields: {child:                         │ │
│ │                                               ┆                               ┆                               ┆ 1210120e0a046c65616612060a0464656570}}]                  │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 1970-01-01T00:00:00.000000002 ┆ 1970-01-01T00:00:00.000000002 ┆ [{name: , fields: null}]                                 │ │
│ └───────────────────────────────────────────────┴───────────────────────────────┴───────────────────────────────┴──────────────────────────────────────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
